--- a/MultistepForm.html
+++ b/MultistepForm.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="MultistepForm.css">
   </head> 
   <body>
-     <form method="POST" autocomplete="off" name="google-sheet">
     <div class="container">
       <header>Signup Form</header>
       <div class="progress-bar">
@@ -47,7 +46,7 @@ Submit</p>
 </div>
 </div>
 <div class="form-outer">
-        <form action="#">
+        <form action="#" method="POST" autocomplete="off" name="google-sheet">
           <div class="page slide-page">
             <div class="title">
 Basic Info:</div>
@@ -126,7 +125,6 @@ How Is the Form:</div>
 </form>
 </div>
 </div>
-    </form>
 <script src="MultistepForm.js"></script>
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbyk5AiGtKDmgW1ct5c-1M9hY5A5KnoGesNxEPxdLr-KsUjSsBU/exec'
