--- a/MultistepForm.html
+++ b/MultistepForm.html
@@ -46,7 +46,7 @@ Submit</p>
 </div>
 </div>
 <div class="form-outer">
-        <form action="#" method="POST" autocomplete="off" name="google-sheet">
+        <form action="#">
           <div class="page slide-page">
             <div class="title">
 Basic Info:</div>
